k8s/nextcloud/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  parentRefs:
    - name: tysoncloud-gateway
      namespace: tc-system
  hostnames:
    - "nextcloud.tysoncloud.tysonjenkins.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nextcloud-nextcloud
          port: 8080
